[package]
name = "serde-value-utils"
version = "0.1.0"
authors = ["OVH SAS <github@ovh.net>"]
edition = "2018"
license = "BSD-3-Clause"
license-file = "LICENSE"
description = "Bundle of utils for serde-value"
keywords = ["serde", "value", "utils"]
readme = "README.md"
repository = "https://github.com/cdumay/rust-serde-value-utils"

[features]
with-schema = []

[dependencies]
serde = "1.0"
serde-value = "0.6"